featute-fix(fare) : fare rounded to int
